Added api, Jackets page spotlight pic, Changed text and corrected typo

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,7 @@
   <h1 class="text-center mb-4"><b>Shopping Planet</b></h1>
 
   <hr class="bg-light mx-5">
-  <h2 class="text-center text-warning">Our Best Sellers</h2>
+  <h2 class="text-center text-warning">Our Best Seller Products</h2>
   <hr class="bg-light mx-5">
   
   <br>
@@ -46,6 +46,10 @@
   
   <br>
   
+  <hr class="bg-light mx-5">
+  <h2 class="text-center text-warning">Our Latest Customer Reviews</h2>
+  <hr class="bg-light mx-5">
+
   <!-- Ionic Carousal of user reviews-->
   <ion-slides [options]="slideOptsOne" loop="true">
     <ion-slide>
@@ -67,11 +71,11 @@
               </ion-card-title>
               <br>
               <ion-card-title >
-                A very Good website for good New Developers!
+                A Very Good website made by Newcomers!
               </ion-card-title>
               <ion-card-subtitle >
-                A very thoughtful website made by these young developers! There's even a light theme switcher for users' choice of theme on the website
-                A few bugs here and there but over all a good Start fot them
+                A very thoughtful website made by these young developers! There's even a light theme switcher for users to keep their choice of theme on the website
+                A few bugs here and there but over all a good Start for them
               </ion-card-subtitle>
             </ion-card-header>
           </ion-card>
@@ -99,8 +103,8 @@
                 A very Good website by New Developers!
               </ion-card-title>
               <ion-card-subtitle >
-                A very thoughtful website made by these young developers! There's even a light theme switcher for users' choice of theme on the website
-                A few bugs here and there but over all a good Start fot them
+                A very thoughtful website made by these young developers! There's even a light theme switcher for users to keep their choice of theme on the website
+                A few bugs here and there but over all, a good Start for them.
               </ion-card-subtitle>
             </ion-card-header>
           </ion-card>
