--- a/src/app/jackets/jackets.page.html
+++ b/src/app/jackets/jackets.page.html
@@ -4,7 +4,7 @@
   <div class="text-center m-3">
     <!-- 1st title -->
     <h1 style="color:  #f7ce3e;">Latest Jackets</h1>
-    <img src="assets\jack 1.png" class="img-fluid" alt="online shopping display image" style="width: 80%;height: 10%;">
+    <img src="assets\jfin.png" class="img-fluid" alt="online shopping display image" style="width: 80%;height: 10%;">
   </div>
 
   <hr class="bg-light mx-5">
