--- a/src/app/others/others.page.html
+++ b/src/app/others/others.page.html
@@ -3,7 +3,7 @@
 <ion-content>
   <div class="text-center m-3">
     <h1 class="text-center">A Store Full of all Latest Items</h1>
-    <img src="assets\j.png" class="img-fluid" alt="Variety Infinite" style="width: 80%;height: 10%;">
+    <!-- <img src="assets\j.png" class="img-fluid" alt="Variety Infinite" style="width: 80%;height: 10%;"> -->
   </div>
 
   <!-- 2nd title -->
